deployed react app

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "assignment-1",
   "version": "0.1.0",
-  "homepage": "https://aasthaguptaa.github.io/ToDoList",
+  "homepage": "https://aasthaguptaa.github.io/TaskList",
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
